cree evento de salida de rango de fechas

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,1 +1,7 @@
-<ngx-range-date-select></ngx-range-date-select>
+<section class="container">
+  <div class="row ">
+    <div class=" card mt-5 col-12 d-flex justify-content-center align-content-center align-items-center">
+      <ngx-range-date-select (rangeDateOut)="handleRangeDate($event)" class="p-5"></ngx-range-date-select>
+    </div>
+  </div>
+</section>
