--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,6 +1,7 @@
 <section class="container">
-  <div class="row ">
-    <div class=" card mt-5 col-12 d-flex justify-content-center align-content-center align-items-center">
+  <div class="row mt-5 ">
+    <h3 class="text-center">NgxRangeDateSelect Demo</h3>
+    <div class=" card col-12 mt-2 d-flex justify-content-center align-content-center align-items-center">
       <ngx-range-date-select (rangeDateOut)="handleRangeDate($event)" class="p-5"></ngx-range-date-select>
     </div>
   </div>
